# vector-c

./: CMakeLists.txt  main.c  matrix.cpp
libs/data_structures/vector/: vector.c  vector.h
tasks/: matrix.h  string_.c  string_.h
